tests/test_assets/semantic/invalid/types/void_returns.cog
bad_void_return::() -> void* {
}