tests/test_assets/semantic/invalid/types/void_returns.expected
semantic error at line 1: function return type cannot contain void
1 semantic error generated.
